<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="8dp">

	<android.support.v7.widget.CardView
		android:id="@+id/colorPrimaryContainer"
		android:layout_width="150dp"
		android:layout_height="150dp"
		app:cardBackgroundColor="@color/colorPrimary"
		app:cardCornerRadius="10dp"
		app:cardElevation="5dp"
		app:cardUseCompatPadding="true"
		android:layout_marginBottom="13dp"
		android:foreground="?attr/selectableItemBackground"
		android:clickable="true">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center">

			<TextView
				android:id="@+id/mainColorPrimaryTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:text="@string/your_apps_branding_color"
				android:gravity="center"
				android:textSize="12sp"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<android.support.v7.widget.CardView
		android:id="@+id/colorAccentContainer"
		android:layout_width="150dp"
		android:layout_height="150dp"
		app:cardBackgroundColor="@color/colorAccent"
		app:cardCornerRadius="10dp"
		app:cardElevation="5dp"
		app:cardUseCompatPadding="true"
		android:foreground="?attr/selectableItemBackground"
		android:clickable="true"
		android:layout_marginBottom="10dp"
		android:layout_alignParentRight="true">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center">

			<TextView
				android:id="@+id/mainColorAccentTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:text="@string/ui_controls_color"
				android:gravity="center"
				android:textSize="12sp"/>

		</LinearLayout>

	</android.support.v7.widget.CardView>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/colorPrimaryContainer"
		android:gravity="center">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/preview"
			android:elevation="7dp"
			android:id="@+id/mainButtonPreview"
			android:background="@drawable/bg_button"
			android:foreground="?attr/selectableItemBackground"
			android:textColor="@android:color/white"
			android:layout_marginRight="5dp"
			android:padding="10dp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/get_colors_list"
			android:elevation="7dp"
			android:id="@+id/mainButtonGetColors"
			android:background="@drawable/bg_button"
			android:foreground="?attr/selectableItemBackground"
			android:textColor="@android:color/white"
			android:layout_toRightOf="@id/mainButtonPreview"
			android:layout_below="@id/colorPrimaryContainer"
			android:layout_marginLeft="5dp"
			android:padding="10dp"/>

	</LinearLayout>

</RelativeLayout>
